--- a/day4(project)/style.css
+++ b/day4(project)/style.css
@@ -9,8 +9,68 @@ h1{
    width: 40%;
    float:left;
    margin-left: 0.5%;
-   padding-left: 1%;
+   padding-left: 0.5%;
 }
 .half-width img{
 width: 100%;
+}
+.top-banner{
+    background-image: url("images/top-banner.png");
+    background-repeat:no-repeat;
+}
+section{
+    height: 500px;
+}
+body{
+    margin: 0%;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient( 45deg, lightSalmon, tomato);
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: pink;
+    font-weight: 700;
+    background-image: -moz-linear-gradient();
+}
+.link-button:hover{
+    color: saddlebrown;
+}
+section{
+    padding-bottom: 200px;
+}
+p{
+    color: dimgray;
+}
+.Dream-area{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;  
+}
+.name-profile{
+    color: orange;
+}
+.single-experiences{
+    box-shadow: 10px 10px 40px;
+    border-radius: 10px;
+    height: 100%;  
+    background-color: white;
+}
+.experiences-area{
+background-image: url(images/exp-bg.png);
+background-repeat: no-repeat;
+background-position: left; 
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, rgb(124, 41, 8), tomato);
+    border-image-slice: 1;
+}
+#baby-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, rgb(29, 10, 117), rgb(157, 71, 255));
+    border-image-slice: 1; 
+}
+footer p{
+    text-align: center;
 }
